--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,11 +1,13 @@
-*{
+*,
+*::before,
+*::after {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
 }
 
-a{
+a {
     text-decoration: none;
     color: rgb(113, 99, 9);
 }
